# Cookiecutter-FastAPI-Blueprint

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/backend/: .dockerignore  .gitignore  LICENSE.md  README.md  pyproject.toml  requirements_dev.txt
{{cookiecutter.project_slug}}/backend/app/: app.py
{{cookiecutter.project_slug}}/backend/app/router/: health.py  users.py
{{cookiecutter.project_slug}}/backend/config/: settings.py
{{cookiecutter.project_slug}}/backend/containers/: application.py
{{cookiecutter.project_slug}}/backend/env/: dev.env
{{cookiecutter.project_slug}}/backend/scripts/: dev_build.sh
{{cookiecutter.project_slug}}/backend/services/: base.py
{{cookiecutter.project_slug}}/backend/test/: test_root.py
{{cookiecutter.project_slug}}/backend/utils/: log_handler.py
{{cookiecutter.project_slug}}/docker_compose/: backend-dev.yaml
{{cookiecutter.project_slug}}/dockerfiles/: backend-dev.dockerfile
