[tool.poetry]
name = "FastAPI-blueprint"
version = "v0.1.0"
description = "This repository is use to create FastAPI service"
authors = ["PaiHsuehChung <eddieworkmail0401@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
fastapi = "^0.70.0"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
loguru = "^0.5.3"
requests = "^2.26.0"
dependency-injector = "^4.36.2"
pre-commit = "^2.15.0"
install = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
flake8 = "^4.0.1"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
